fix download btn breaks the manuals layout

--- a/assets/css/pages/_product-manuals.scss
+++ b/assets/css/pages/_product-manuals.scss
@@ -95,7 +95,7 @@
 
             .btn {
                 width: 100%;
-                min-width: auto;
+                min-width: auto !important;
                 padding-left: rem(10);
                 padding-right: rem(10);
             }
